--- a/TestdrivenHotel.UI/Pages/Index.cshtml
+++ b/TestdrivenHotel.UI/Pages/Index.cshtml
@@ -8,4 +8,4 @@
     <h1 class="display-4">Welcome to</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
-<h1>Lucias Hotel test failed!!!</h1>
+<h1>Lucias Hotel test passed!!!</h1>
