--- a/TestdrivenHotel.UI/Pages/Shared/_Layout.cshtml
+++ b/TestdrivenHotel.UI/Pages/Shared/_Layout.cshtml
@@ -10,17 +10,18 @@
 </head>
 <body>
     <header id="header">
-        <div id="logo">
-            <a class="navbar-brand" asp-area="" asp-page="/Index">Lucias Hotel</a>
-        </div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        
+        <nav id="nav ul li" class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                
+                <div id="logo">
+                    <img src="" />
+                    <a class="navbar-brand" asp-area="" asp-page="/Index"> LUCIASHOTEL</a>
+                </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
  
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div id="navigation">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
@@ -28,9 +29,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Explore</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#about">about</a> 
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="#">Contact</a>
                         </li>
+                        
+                        <li> <i class="fa fa-search"></i> </li>
+
+                        <li> <button class="primary-btn">BOOK NOW</button> </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -40,6 +50,7 @@
     <div class="container">
         <div class="text-center">
             <h1 class="display-4">Welcome to Lucias Hotel</h1>
+            <img src="\TestdrivenHotel.UI\Img\bakgrund_Image.webp" alt="" />
         </div>
 
         <main id="content" role="main" class="pb-3">
