--- a/TestdrivenHotel.UI/Pages/Shared/_Layout.cshtml
+++ b/TestdrivenHotel.UI/Pages/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         
                         <li> <i class="fa fa-search"></i> </li>
 
-                        <li> <button class="primary-btn"><a asp-page="/Booking">BOOK NOW </a></button>  </li>
+                        <li> <button class="primary-btn"><a class="link-light" asp-page="/Booking"> BOOK NOW </a> </button>  </li>
                         
                     </ul>
                 </div>
