--- a/TestdrivenHotel.UI/Pages/Index.cshtml
+++ b/TestdrivenHotel.UI/Pages/Index.cshtml
@@ -4,51 +4,70 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to the Hotel Booking System</h1>
-    <h4>Please enter your desired check-in and check-out dates, as well as the number of guests.</h4>
-</div>
-
-<form class="form" method="post">
-    
-    <div class="container-lg bg-body opacity-75">
-        <h5 class="p-1">Explore our avaliable room</h5>
-        <div class="d-lg-flex justify-content-center">
-            <div class="p-lg-1">
-                <label for="checkInDate">Check-in Date:</label>
-            <input type="date" asp-for="CheckInDate" name="checkInDate" id="checkInDate" required>
-            </div>
-            <div class="p-lg-1">
-                <label for="checkOutDate">Check-out Date:</label>
-            <input type="date" asp-for="CheckOutDate" name="checkOutDate" id="checkOutDate" required>
-            </div>
-            <div class="p-1">
-                <label for="numberOfGuests">Number of Guests:</label>
-            <select name="numberOfGuests" id="numberOfGuests" asp-for="NumberOfGuests">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-            </select>
-             </div>
-            <div class="p-1" >
-                <label for="roomType">Room Type:</label>
-                <select asp-for="RoomType" id="roomType" name="roomType">
-                    <option value="">All</option>
-                    <option value="Single Room">Single Room</option>
-                    <option value="Double Room">Double Room</option>
-                    <option value="Luxury Room">Luxury Room</option>
-                </select>
-            </div>
-            <div class="p-1">
-                <button type="submit">Search</button>
-            </div>
+<div class="container-fluid bg-light opacity-75 align-content-center">
+    <div class="text-center text-body">
+        <h1 class="display-4">Welcome to Lucias Mansion Hotel </h1>
+        <div class="flex-md-column">
+            <h4>Reserve a room at an idyllic mansion in beautiful nature with its own sea side view, delicious cuisine & great personal service.</h4>
+            <h4>Enter your desired check-in and check-out dates, as well as the number of guests.</h4>
         </div>
-        
     </div>
-</form>
+    <form>
+        <div class="container-lg"> 
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+        </div>
+    </form>
+    <form class="form" method="post">
+
+        <div class="d-flex bg-body ">
+            <h5 class="p-4 text-light">Check avaliabilety</h5>
+
+            <div class="d-inline-flex justify-content-center text-light">
+                <div class="p-2">
+                    <label for="checkInDate">Check-in Date:</label>
+                    <input type="date" asp-for="CheckInDate" name="checkInDate" id="checkInDate" required>
+                </div>
+                <div class="p-2">
+                    <label for="checkOutDate">Check-out Date:</label>
+                    <input type="date" asp-for="CheckOutDate" name="checkOutDate" id="checkOutDate" required>
+                </div>
+                <div class="p-2">
+                    <label for="numberOfGuests">Guests:</label>
+                    <select name="numberOfGuests" id="numberOfGuests" asp-for="NumberOfGuests">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
+                </div>
+                <div class="p-2">
+                    <label for="roomType">Room Type:</label>
+                    <select asp-for="RoomType" id="roomType" name="roomType">
+                        <option value="">All</option>
+                        <option value="Single Room">Single Room</option>
+                        <option value="Double Room">Double Room</option>
+                        <option value="Luxury Room">Luxury Room</option>
+                    </select>
+                </div>
+                <div class="p-4">
+                    <button type="submit">Search</button>
+                </div>
+            </div>
+
+        </div>
+    </form>
+    <form>
+        <div class="container-lg">
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+        </div>
+    </form>
 
 
+</div>
         
         
