--- a/TestdrivenHotel.UI/Pages/Booking.cshtml
+++ b/TestdrivenHotel.UI/Pages/Booking.cshtml
@@ -1,18 +1,24 @@
 ﻿@page
 @model TestdrivenHotel.UI.Pages.BookingModel
 @{
-	ViewData["Title"] = "Booking page";
+	ViewData["Title"] = "contact deatails page";
 }
 <div class="container-fluid bg-light opacity-75 align-content-center">
     <div class="text-center text-body">
-        <h1 class="display-4 p-2">Welcome to the Hotel Booking System </h1>
+        <h1 class="display-4 p-2">Booking System </h1>
         <div class="flex-md-column">
-            <h4>Reserve a room at an idyllic mansion in beautiful nature with its own sea side view, delicious cuisine & great personal service.</h4>
+            <h4>Reserve a room </h4>
         </div>
     </div>
+   <div>
+       <h2> Your booking is done. See you @Model.CheckInDate</h2>
+   </div>
 
+
+    @if(Model.RoomId == null)
+    {
     <form class ="form" method="post">
-        <h4>Enter your desired check-in and check-out dates, as well as the number of guests.</h4>
+        <p class="text-center">Enter your desired check-in and check-out dates, as well as the number of guests for your desired room.</p>
         <div class="d-flex bg-body ">
             <h5 class="p-4 text-light">Check avaliabilety</h5>
 
@@ -51,3 +57,5 @@
 
         </div>
     </form>
+    }
+</div>
